--- a/app/weather/weather.tmpl.html
+++ b/app/weather/weather.tmpl.html
@@ -1,6 +1,3 @@
-<span> Here is the weather! </span>
-
-<br/>
 <form class="form-inline">
 	<div class="row">
 		<div class="col-xs-2 col-sm-2 col-md-2 col-lg-2" ></div>
@@ -19,7 +16,7 @@
 		<button type="submit" class="btn btn-primary col-xs-2 col-sm-2 col-md-2 col-lg-2" ng-click="weather.getHourWeatherByAddress(weather.address)">Hourly</button>
 		<div class="col-xs-1 col-sm-1 col-md-1 col-lg-1" ></div>
 
-		<button type="submit" class="btn btn-primary col-xs-2 col-sm-2 col-md-2 col-lg-2" styleng-click="weather.getDayWeatherByAddress(weather.address)">Daily</button>
+		<button type="submit" class="btn btn-primary col-xs-2 col-sm-2 col-md-2 col-lg-2" ng-click="weather.getDayWeatherByAddress(weather.address)">Daily</button>
 		<div class="col-xs-2 col-sm-2 col-md-2 col-lg-2" ></div>
 
 	</div>
