--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="wrapper">
         <div class="inner container-fluid">
             <div class="header">
-                <h1>Weather</h1>
+                <h1 class="text-center">Simply Weather</h1>
             </div>
 
             <div class="body">
